--- a/public_html/kiosk.html
+++ b/public_html/kiosk.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">     
-    <title>p5_sound_test</title>
+    <title>MetaPixelCamera Kiosk</title>
     <script src="p5/p5.js" type="text/javascript"></script>
     <script src="kiosk.js" type="text/javascript"></script>
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style> 
