--- a/public_html/kiosk.html
+++ b/public_html/kiosk.html
@@ -5,6 +5,7 @@
     <title>MetaPixelCamera Kiosk</title>
     <script src="p5/p5.js" type="text/javascript"></script>
     <script src="kiosk.js" type="text/javascript"></script>
+    <script src="socket.io.js" type="text/javascript"></script>
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style> 
   </head>
   <body>
